syntax = "proto3";
import "google/protobuf/empty.proto";


option java_multiple_files = true;
option java_package = "sep3.project.protobuf";
option java_outer_classname = "ClassEntityProto";

message ClassEntity {
  optional string id = 1;
  string title = 2;
  string room = 3;
}

message RequestCreateClassEntity{
  ClassEntity classEntity = 1;
}
message ResponseCreateClassEntity{
  ClassEntity classEntity = 1;
}
message RequestGetClassEntity{
  string classId = 1;
}
message ResponseGetClassEntity{
  ClassEntity classEntity = 1;
}
message RequestGetClassEntityByStudentUsername{
  string studentUsername = 1;
}
message RequestGetClassEntitiesByUsername{
  string username = 1;
}
message ResponseGetClassEntitiesByUsername{
  repeated ClassEntity classEntities = 1;
}
service ClassEntityService{
  rpc createClassEntity(RequestCreateClassEntity) returns (ResponseCreateClassEntity);
  rpc getClassEntityById(RequestGetClassEntity) returns (ResponseGetClassEntity);
  rpc getClassEntitiesByUsername(RequestGetClassEntitiesByUsername) returns (ResponseGetClassEntitiesByUsername);

}