syntax = "proto3";
import "google/protobuf/empty.proto";


option java_multiple_files = true;
option java_package = "sep3.project.protobuf";
option java_outer_classname = "LessonProto";

message Lesson{
  optional string id = 1;
  int32 date = 2;
  string topic = 3;
  string description = 4;
}

message RequestAddLesson{
  string classId = 1;
  Lesson lesson = 2;
}
message ResponseAddLesson{
  Lesson lesson = 1;
}
message RequestAddAttendance{
  string lessonId = 1;
  repeated string usernames = 2;
}
message ResponseAddAttendance{
  string result = 1;
}
message RequestGetAttendance{
  string lessonId = 1;
}
message ResponseGetAttendance{
  repeated string usernames = 1;
}
message RequestGetLessonsByClassId{
  string classId = 1;
}
message ResponseGetLessonsByClassId{
  repeated Lesson lessons = 1;
}
message RequestGetLessonById{
  string lessonId = 1;
}
message ResponseGetLessonById{
  Lesson lesson = 1;
}

message RequestGetLessonExtendedByHomeworkHandInFeedback{
  string lessonId = 1;
  string username = 2;
}

//message ResponseGetLessonExtendedByHomeworkHandInFeedback{
//  Lesson lesson = 1;
//  optional HomeworkHelper homework = 2;
//  optional FeedbackHelper feedback = 3;
//}
service LessonService{
  rpc addLesson(RequestAddLesson) returns (ResponseAddLesson);
  rpc addAttendance(RequestAddAttendance) returns (ResponseAddAttendance);
  rpc getAttendance(RequestGetAttendance) returns (ResponseGetAttendance);
  rpc getLessonById(RequestGetLessonById) returns (ResponseGetLessonById);
  rpc getLessonsByClassId(RequestGetLessonsByClassId) returns (ResponseGetLessonsByClassId);
//  rpc GetLessonExtendedByHomeworkHandInFeedback(RequestGetLessonExtendedByHomeworkHandInFeedback) returns (ResponseGetLessonExtendedByHomeworkHandInFeedback);
}





